Firebase Recycler adapter, in this we fetch value from firebase and add click action on it

--- a/app/src/main/res/layout/activity_view.xml
+++ b/app/src/main/res/layout/activity_view.xml
@@ -1,14 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    tools:context=".ViewActivity"
-    android:orientation="vertical">
+    android:layout_height="match_parent"
+    tools:context=".ui.ViewActivity"
+    android:fitsSystemWindows="true"
+    >
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rec_topicslist"/>
+   <com.github.ybq.android.spinkit.SpinKitView
+       xmlns:app="http://schemas.android.com/apk/res-auto"
+       android:layout_width="150dp"
+       android:layout_height="150dp"
+       android:layout_centerInParent="true"
+       android:id="@+id/spinner_viewActivity"
+       style="@style/SpinKitView.DoubleBounce"
 
-</LinearLayout>
+       />
+
+</RelativeLayout>
