--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,17 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     tools:openDrawer="start"
-    android:orientation="vertical">
+    >
 
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
-       android:layout_height="match_parent"
+       android:layout_height="wrap_content"
        android:id="@+id/rec_btnview"
        />
+   <com.github.ybq.android.spinkit.SpinKitView
+       xmlns:app="http://schemas.android.com/apk/res-auto"
+       android:layout_width="150dp"
+       android:layout_height="150dp"
+       android:layout_centerInParent="true"
+       android:id="@+id/spinner_mainActivity"
+       style="@style/SpinKitView.DoubleBounce"
 
-</LinearLayout>
+      />
+
+</RelativeLayout>
