--- a/app/src/main/res/layout-v21/activity_detail.xml
+++ b/app/src/main/res/layout-v21/activity_detail.xml
@@ -4,13 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.DetailActivity"
+    tools:context=".ui.DetailActivity"
     android:fitsSystemWindows="true"
     android:orientation="vertical">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="350dp"
         android:id="@+id/app_barLayoutDetail"
         android:theme="@style/ThemeOverlay.MaterialComponents.Dark"
         android:fitsSystemWindows="true">
