--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,23 +4,127 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+
     tools:openDrawer="start"
-    >
+    android:background="#16181E">
+   <!--<ViewFlipper
+       android:layout_width="match_parent"
+       android:layout_height="200dp"
+       android:id="@+id/viewFlipper_mainActivity"
+       android:layout_marginTop="10dp"
+       android:autoStart="true"
+       >
+      <ImageView
+          android:layout_width="match_parent"
+          android:layout_height="200dp"
+          android:id="@+id/img_viewFlipper"
+          android:scaleType="centerCrop"
+         />
+      <ImageView
+          android:layout_width="match_parent"
+          android:layout_height="200dp"
+          android:id="@+id/img_viewFlipper1"
+          android:scaleType="centerCrop"
+          />
+      <ImageView
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:id="@+id/img_viewFlipper2"
+          android:scaleType="centerCrop"
+          />
+
+      <ImageView
+          android:layout_width="match_parent"
+          android:layout_height="200dp"
+          android:id="@+id/img_viewFlipper3"
+          android:scaleType="centerCrop"
+          />
+      <ImageView
+          android:layout_width="match_parent"
+          android:layout_height="200dp"
+          android:id="@+id/img_viewFlipper4"
+          android:scaleType="centerCrop"
+          />
+   </ViewFlipper>
+   <TextView
+       android:layout_width="0dp"
+       android:layout_height="0dp"
+       android:id="@+id/img"
+       android:visibility="invisible"
+      />
+   <TextView
+       android:layout_width="0dp"
+       android:layout_height="0dp"
+       android:id="@+id/img1"
+       android:visibility="invisible"
+       />
+   <TextView
+       android:layout_width="0dp"
+       android:layout_height="0dp"
+       android:id="@+id/img2"
+       android:visibility="invisible"
+       />
+   <TextView
+       android:layout_width="0dp"
+       android:layout_height="0dp"
+       android:id="@+id/img3"
+       android:visibility="invisible"
+       />
+   <TextView
+       android:layout_width="0dp"
+       android:layout_height="0dp"
+       android:id="@+id/img4"
+       android:visibility="invisible"
+       />-->
+   <androidx.appcompat.widget.Toolbar
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:id="@+id/main_toolbaar"
+       app:layout_collapseMode="pin"
+      />
+   <com.denzcoskun.imageslider.ImageSlider
+       android:layout_width="match_parent"
+       android:layout_height="200dp"
+       android:id="@+id/slider"
+       android:scrollbarSize="5dp"
+       android:layout_marginTop="10dp"
+       app:placeholder="@drawable/gray"
+       app:error_image="@drawable/gray"
+       app:auto_cycle="true"
+       app:delay="0"
+       app:period="2000"
+       app:corner_radius="5"
+       android:layout_below="@id/main_toolbaar"
+      />
+   <TextView
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:text="Tips for preparation to interview"
+       android:textSize="16sp"
+       android:textStyle="bold"
+       android:id="@+id/tv_tips"
+       android:visibility="invisible"
+       android:textColor="#000"
+       android:layout_centerHorizontal="true"
+       android:layout_marginTop="15dp"
+       android:layout_below="@id/main_toolbaar"
+       />
+
+   <Button
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+      android:id="@+id/btn"
+       android:layout_below="@id/slider"
+      />
 
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rec_btnview"
-       />
-   <com.github.ybq.android.spinkit.SpinKitView
-       xmlns:app="http://schemas.android.com/apk/res-auto"
-       android:layout_width="150dp"
-       android:layout_height="150dp"
-       android:layout_centerInParent="true"
-       android:id="@+id/spinner_mainActivity"
-       style="@style/SpinKitView.DoubleBounce"
+       android:layout_below="@id/btn"
 
-      />
+       />
+
 
 </RelativeLayout>
