--- a/app/src/main/res/layout/activity_view.xml
+++ b/app/src/main/res/layout/activity_view.xml
@@ -1,17 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.ViewActivity"
     android:fitsSystemWindows="true"
+    android:background="@color/colorPrimary"
+    android:orientation="vertical"
     >
+
+
+
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rec_topicslist"/>
-   <com.github.ybq.android.spinkit.SpinKitView
+   <!--<com.github.ybq.android.spinkit.SpinKitView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="150dp"
        android:layout_height="150dp"
@@ -19,6 +24,6 @@
        android:id="@+id/spinner_viewActivity"
        style="@style/SpinKitView.DoubleBounce"
 
-       />
+       />-->
 
-</RelativeLayout>
+</LinearLayout>
