--- a/app/src/main/res/layout/btnview.xml
+++ b/app/src/main/res/layout/btnview.xml
@@ -3,35 +3,48 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="#FFF"
     app:cardCornerRadius="3.0dp"
     app:cardUseCompatPadding="true"
-    app:contentPadding="5.0dp">
-    <LinearLayout
+    app:contentPadding="5.0dp"
+
+    app:cardBackgroundColor="@color/btnBackground"
+    >
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        >
+        android:orientation="horizontal"
+        android:padding="10dp"
 
+        >
 
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_chevron_right"
-        android:paddingLeft="20dp"
-        android:layout_marginTop="2dp"
-        android:id="@+id/img_view"
+        android:fitsSystemWindows="true"
+        android:scaleType="centerCrop"
+        android:id="@+id/img_mainActivity"/>
 
-        />
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/tv_view"
-        android:textSize="24dp"
+        android:textSize="18sp"
+        android:layout_marginTop="10dp"
+        android:layout_below="@+id/img_mainActivity"
         android:text="click here"
-        android:paddingLeft="20dp"
-        android:gravity="center_vertical"
+        android:textColor="#FFF"
+        android:paddingBottom="10dp"
+
         />
-    </LinearLayout>
+        <!--<ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_chevron_right"
+            android:paddingLeft="20dp"
+            android:layout_alignParentRight="true"
+            android:id="@+id/img_view"
+            android:tint="#FFF"
+            android:layout_alignParentEnd="true" />-->
+    </RelativeLayout>
 
 </androidx.cardview.widget.CardView>
