--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
+    <color name="colorPrimary">#16181E</color>
+    <color name="colorPrimaryDark">#16181E</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="colorDarkSemiTransparnt">#C6000000</color>
     <color name="transparnt">#00000000</color>
+    <color name="btnBackground">#353B4B</color>
+    <color name="white">#FFF</color>
+
+
 </resources>
