Firebase Recycler adapter, in this we fetch value from firebase and add click action on it

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,130 +1,192 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    tools:openDrawer="start"
-    android:background="#16181E">
-   <!--<ViewFlipper
+   <RelativeLayout
        android:layout_width="match_parent"
-       android:layout_height="200dp"
-       android:id="@+id/viewFlipper_mainActivity"
-       android:layout_marginTop="10dp"
-       android:autoStart="true"
-       >
-      <ImageView
-          android:layout_width="match_parent"
-          android:layout_height="200dp"
-          android:id="@+id/img_viewFlipper"
-          android:scaleType="centerCrop"
-         />
-      <ImageView
-          android:layout_width="match_parent"
-          android:layout_height="200dp"
-          android:id="@+id/img_viewFlipper1"
-          android:scaleType="centerCrop"
-          />
-      <ImageView
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:id="@+id/img_viewFlipper2"
-          android:scaleType="centerCrop"
-          />
+       android:layout_height="wrap_content"
+       tools:openDrawer="start">
 
-      <ImageView
-          android:layout_width="match_parent"
-          android:layout_height="200dp"
-          android:id="@+id/img_viewFlipper3"
-          android:scaleType="centerCrop"
-          />
-      <ImageView
-          android:layout_width="match_parent"
-          android:layout_height="200dp"
-          android:id="@+id/img_viewFlipper4"
-          android:scaleType="centerCrop"
-          />
-   </ViewFlipper>
-   <TextView
-       android:layout_width="0dp"
-       android:layout_height="0dp"
-       android:id="@+id/img"
-       android:visibility="invisible"
-      />
-   <TextView
-       android:layout_width="0dp"
-       android:layout_height="0dp"
-       android:id="@+id/img1"
-       android:visibility="invisible"
-       />
-   <TextView
-       android:layout_width="0dp"
-       android:layout_height="0dp"
-       android:id="@+id/img2"
-       android:visibility="invisible"
-       />
-   <TextView
-       android:layout_width="0dp"
-       android:layout_height="0dp"
-       android:id="@+id/img3"
-       android:visibility="invisible"
-       />
-   <TextView
-       android:layout_width="0dp"
-       android:layout_height="0dp"
-       android:id="@+id/img4"
-       android:visibility="invisible"
-       />-->
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/main_toolbaar"
        app:layout_collapseMode="pin"
+       android:background="@color/colorPrimary"
+       >
+      <RelativeLayout
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content">
+
+         <ImageView
+             android:id="@+id/toolbaar_icon"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:src="@drawable/ic_notification"
+             android:tint="@color/white"
+             />
+         <TextView
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+            android:textSize="18sp"
+             android:textAllCaps="true"
+            android:text="Interview"
+            android:textColor="@color/white"
+             android:layout_toRightOf="@id/toolbaar_icon"
+             android:layout_marginLeft="15dp"
+            />
+      </RelativeLayout>
+   </androidx.appcompat.widget.Toolbar>
+
+
+   <TextView
+       android:layout_below="@id/main_toolbaar"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:text="@string/tips"
+       android:textColor="@color/black"
+       android:textStyle="bold"
+       android:layout_marginTop="5dp"
+       android:layout_centerHorizontal="true"
+       android:id="@+id/tv_tips"
       />
+
+
+   <View
+       android:layout_width="match_parent"
+       android:layout_height="200dp"
+       android:background="@drawable/graybackground"
+       android:layout_below="@id/tv_tips"
+       android:layout_marginTop="5dp"
+      />
+
    <com.denzcoskun.imageslider.ImageSlider
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/slider"
        android:scrollbarSize="5dp"
-       android:layout_marginTop="10dp"
-       app:placeholder="@drawable/gray"
-       app:error_image="@drawable/gray"
+       android:layout_marginTop="5dp"
+       app:placeholder="@drawable/graybackground"
+       app:error_image="@drawable/graybackground"
        app:auto_cycle="true"
        app:delay="0"
        app:period="2000"
        app:corner_radius="5"
-       android:layout_below="@id/main_toolbaar"
+       android:layout_below="@id/tv_tips"
       />
+
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
-       android:text="Tips for preparation to interview"
-       android:textSize="16sp"
-       android:textStyle="bold"
-       android:id="@+id/tv_tips"
-       android:visibility="invisible"
-       android:textColor="#000"
-       android:layout_centerHorizontal="true"
-       android:layout_marginTop="15dp"
-       android:layout_below="@id/main_toolbaar"
-       />
-
-   <Button
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content"
-      android:id="@+id/btn"
        android:layout_below="@id/slider"
-      />
-
-   <androidx.recyclerview.widget.RecyclerView
+       android:id="@+id/tv_csit"
+       android:textColor="@color/black"
+       android:text="@string/cs_and_it"
+       android:textStyle="bold"
+       android:layout_marginTop="5dp"
+       android:paddingStart="10dp"
+       android:paddingLeft="10dp" />
+   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
-       android:id="@+id/rec_btnview"
-       android:layout_below="@id/btn"
+       android:orientation="vertical"
+       android:layout_below="@id/tv_csit"
+       android:layout_marginTop="5dp"
+       android:id="@+id/ll_linear_layout">
+      <androidx.recyclerview.widget.RecyclerView
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:id="@+id/rec_btnview"
+          android:orientation="horizontal"
+          android:paddingLeft="10dp"
+          android:paddingStart="10dp"/>
 
-       />
+      <Button
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:id="@+id/btn"
+          android:layout_below="@id/rec_btnview"
+          android:layout_marginTop="10dp"
+          />
 
+      <TextView
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+         android:text="Prepare for online exam "
+          android:textColor="@color/black"
+          android:textStyle="bold"
+          android:textSize="16sp"
+          android:layout_marginLeft="10dp"
+          android:layout_marginTop="10dp"
+         />
+      <TextView
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:text="frequently ask in many companies"
+          android:textColor="@color/black"
+          android:textSize="14sp"
+          android:layout_marginLeft="10dp"
+          />
+   </LinearLayout>
 
-</RelativeLayout>
+   <LinearLayout
+       android:layout_width="match_parent"
+       android:layout_height="160dp"
+       android:orientation="horizontal"
+       android:layout_below="@id/ll_linear_layout"
+       android:id="@+id/l2_linear_layout"
+       >
+
+      <androidx.recyclerview.widget.RecyclerView
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:id="@+id/rv_programming"
+          tools:listitem="@layout/btnview"
+          android:orientation="horizontal"
+         />
+   </LinearLayout>
+      <Button
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:id="@+id/btn_non_technical"
+          android:layout_below="@id/l2_linear_layout"
+          android:layout_marginTop="10dp"
+          android:text="Non-Technical questions for interview "
+          />
+   <LinearLayout
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:orientation="vertical"
+       android:layout_below="@id/btn_non_technical"
+       android:layout_marginTop="10dp">
+      <TextView
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:text="Build your programming knowledge"
+          android:textColor="@color/black"
+          android:textStyle="bold"
+          android:textSize="16sp"
+          android:layout_marginLeft="10dp"
+          android:layout_marginTop="10dp"
+          />
+      <TextView
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:text="MCQ test, Programming questions and more >"
+          android:textColor="@color/black"
+          android:textSize="14sp"
+          android:layout_marginLeft="10dp"
+          />
+      <androidx.recyclerview.widget.RecyclerView
+          android:layout_width="match_parent"
+          android:layout_height="160dp"
+          android:id="@+id/rv_programming_mcq_test"
+          tools:listitem="@layout/btnview"
+         />
+   </LinearLayout>
+
+   </RelativeLayout>
+</ScrollView>
