--- a/app/src/main/res/layout/activity_tab_layout_three__logicall.xml
+++ b/app/src/main/res/layout/activity_tab_layout_three__logicall.xml
@@ -5,13 +5,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".TabLayoutOne_Quant"
-    android:gravity="center">
+    android:orientation="vertical">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Logical"
         android:textColor="#000"
+        />
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/rv_tab_layout_three_logical"
         />
 
 
