--- a/app/src/main/res/layout/activity_tab_layout_two__english.xml
+++ b/app/src/main/res/layout/activity_tab_layout_two__english.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".TabLayoutOne_Quant"
-    android:gravity="center">
+    android:orientation="vertical">
 
     <TextView
         android:layout_width="wrap_content"
@@ -13,6 +13,10 @@
         android:text="English"
         android:textColor="#000"
         />
-
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/rv_tab_layout_two_english"
+        />
 
 </LinearLayout>
