--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="transparnt">#00000000</color>
     <color name="btnBackground">#353B4B</color>
     <color name="white">#FFF</color>
+    <color name="black">#000000</color>
 
 
 </resources>
